<resources>
    <string name="app_name">StarWarsSearch</string>
    <string name="character_name">Character name</string>
    <string name="no_result">No result.\nTry a more general keyword</string>
    <string name="planet">Planet</string>
    <string name="species">Species</string>
    <string name="films">Films</string>
    <string name="starships">Starships</string>
    <string name="vehicles">Vehicles</string>
    <string name="height">Height:</string>
    <string name="birth_year">Birth Year:</string>
    <string name="name">Name:</string>
    <string name="population">Population:</string>
    <string name="gravity">Gravity:</string>
    <string name="language">Language:</string>
    <string name="model">Model:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="passengers">Passengers:</string>
    <string name="producer_text">Producer(s): %s</string>
    <string name="retry">Retry</string>
    <string name="empty_result">No result.</string>
    <string name="no_characters">No Available characters.</string>
    <string name="characters">Characters</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="save_character_message">Character Saved</string>
    <string name="delete_character_message">Character deleted</string>
    <string name="delete_confirmation_message">Operation cannot be undone. Continue?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="characters_from_network">Characters from network</string>
    <string name="characters_from_local_db">Characters from local database</string>
</resources>