<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vehicle"
            type="com.arch.starwarssearch.model.VehiclePresentation" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/list_item_background"
        android:padding="4dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@+id/tv_vehicle_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_vehicle_name" />

        <TextView
            android:id="@+id/tv_vehicle_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{vehicle.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_name"
            app:layout_constraintTop_toTopOf="@id/tv_name"
            tools:text="Snowspeeder" />

        <TextView
            android:id="@+id/tv_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/model"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_vehicle_name" />

        <TextView
            android:id="@+id/tv_vehicle_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{vehicle.model}"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_model"
            app:layout_constraintTop_toTopOf="@+id/tv_model"
            tools:text="t-47 airspeeder" />

        <TextView
            android:id="@+id/tv_manufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/manufacturer"
            app:layout_constraintStart_toStartOf="@id/tv_model"
            app:layout_constraintTop_toBottomOf="@id/tv_vehicle_model" />

        <TextView
            android:id="@+id/tv_vehicle_manufacturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{vehicle.manufacturer}"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_manufacturer"
            app:layout_constraintTop_toTopOf="@+id/tv_manufacturer"
            tools:text="Incom corporation" />

        <TextView
            android:id="@+id/tv_passengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/passengers"
            app:layout_constraintStart_toStartOf="@id/tv_manufacturer"
            app:layout_constraintTop_toBottomOf="@id/tv_vehicle_manufacturer" />

        <TextView
            android:id="@+id/tv_vehicle_passengers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{vehicle.passengers}"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_passengers"
            app:layout_constraintTop_toTopOf="@+id/tv_passengers"
            tools:text="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>